--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rekap Data Paket (Spreadsheet View)</title>
+    <title>Rekap Data Paket</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
         <div class="flex items-center gap-3">
             <div class="w-8 h-8 bg-green-500 rounded flex items-center justify-center font-bold text-lg">X</div>
             <div>
-                <h1 class="font-semibold text-sm leading-tight">Rekap Harian Logistik.xlsx</h1>
+                <h1 class="font-semibold text-sm leading-tight">Rekap Harian Logistik</h1>
                 <p class="text-xs text-green-200">Sistem Input & Decoder Otomatis</p>
             </div>
         </div>
@@ -209,4 +209,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
